# light_enum

./: Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: format.yml  lint  test.yml
src/: lib.rs  light_enum_test.rs  main.rs  values_test.rs
