[package]
name = "light_enum"
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["wiiznokes <wiiznokes2@gmail.com>"]
repository = "https://github.com/wiiznokes/light_enum"
keywords = ["enum", "macros", "derive", "light", "values"]
categories = ["rust-patterns"]
exclude = ["/.*", "/Makefile", "LICENCE"]
description = """
provide a derive keyword to generate a light enum
"""

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
proc-macro = true


[[test]]
name = "light_enum"
path = "src/light_enum_test.rs"

[[test]]
name = "values"
path = "src/values_test.rs"

[dependencies]
syn = "2.0"
quote = "1.0"